--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/draft-js": "^0.10.43",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.0.0",
@@ -18,6 +19,7 @@
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "draft-js": "^0.11.6",
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
