--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^21.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,16 +20,18 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.19.2",
+    "build": "^0.1.4",
     "connected-react-router": "^6.8.0",
     "draft-js": "^0.11.6",
     "history": "^4.10.1",
+    "html-react-parser": "^0.13.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
